--- a/bin/ls/Makefile
+++ b/bin/ls/Makefile
@@ -1,6 +1,8 @@
-#	$OpenBSD: Makefile,v 1.6 2000/07/19 19:27:35 mickey Exp $
+#	$OpenBSD: Makefile,v 1.7 2003/08/06 19:09:09 tedu Exp $
 
 PROG=	ls
 SRCS=	cmp.c ls.c main.c print.c util.c
+DPADD= ${LIBUTIL}
+LDADD= -lutil
 
 .include <bsd.prog.mk>
